<resources>
    <!-- Cadenas generales -->
    <string name="app_name">Tickets</string>
    <string name="google_app_id">148070650521</string>

    <!-- Cadenas generales para errores de GCM (solo log) -->
    <string name="log_success_token">Token generado</string>
    <string name="log_error_token">Error al actualizar Token</string>

    <!-- Cadenas generales para mensajes -->
    <string name="general_message_title_send_email_success">E-mail enviado correctamente</string>
    <string name="general_message_description_instruction_register">Siga las instrucciones para generar su cuenta de usuario</string>
    <string name="general_message_description_instruction_password">Siga las instrucciones para actualizar su contraseña</string>

    <string name="general_message_title_ws_request_fail">Error al realizar la petición al Web Service</string>
    <string name="general_message_title_bad_input_data">Datos no válidos</string>

    <string name="general_message_description_no_description">Debe especificar la descripción</string>
    <string name="general_message_description_no_atention_area">Debe especificar el Área de Atención</string>
    <string name="general_message_description_no_estatus">Debe especificar un Estatus</string>

    <!-- Cadenas generales para notificar al usuario -->
    <string name="general_toast_create_report_successful">El reporte se ha generado de forma correcta</string>
    <string name="general_toast_delegate_report_successful">El reporte se ha actualizado de forma correcta</string>

    <!-- Cadenas para el menu de navegacion -->
    <string name="nav_drawer_open">Abre menu de navegación</string>
    <string name="nav_drawer_close">Cierra menu de navegación</string>
    <string name="nav_user_image">Imagen de usuario</string>
    <string name="nav_user_name">Nombre de usuario</string>
    <string name="nav_welcome">Menú de inicio</string>
    <string name="nav_about">Acerca de</string>
    <string name="nav_logout">Cerrar sesión</string>

    <!-- Cadenas para el Fragment de manejo de mensajes -->
    <string name="message_imv_description">Icono</string>

    <!-- Cadenas para el Fragment de Loading -->
    <string name="loading_img_cenapred">Icono CENAPRED</string>
    <string name="loading_txv_loading">C A R G A N D O</string>

    <!-- Cadenas para el Fragment de Acerca de -->
    <string name="about_imv_icon">Ícono de CENAPRED</string>
    <string name="about_txv_company_name">Centro Nacional de Prevención de Desastres</string>
    <string name="about_txv_developer_title">Desarrollado por:\nEquipo de Desarrollo de Sistemas</string>
    <string name="about_txv_version">Versión: 1.0 (BETA)</string>
    <string name="about_txv_date">Fecha de lanzamiento: 08/MARZO/2016</string>

    <!-- Cadenas para el Fragment de Login -->
    <string name="login_imv_icon">Ícono de aplicación</string>
    <string name="login_txv_username">Usuario</string>
    <string name="login_txv_password">Contraseña</string>
    <string name="login_txv_email">E-mail</string>
    <string name="login_btn_send">Ingresar</string>
    <string name="login_btn_request">Solicitar</string>
    <string name="login_txv_register">Registro</string>
    <string name="login_txv_recoverPassword">Recuperar contraseña</string>

    <!-- Cadenas para el Fragment de Welcome -->
    <string name="welcome_title_create_ticket">Generar</string>
    <string name="welcome_btn_ticket_technical_support">Soporte Técnico</string>
    <string name="welcome_btn_ticket_developers">Desarrollo de Sistemas</string>
    <string name="welcome_btn_ticket_networking">Redes y Enlaces</string>

    <string name="welcome_title_search_ticket">Buscar</string>
    <string name="welcome_btn_my_ticket_pending">Mis tickets pendientes</string>
    <string name="welcome_btn_search_ticket_number">Por número de folio</string>
    <string name="welcome_btn_request_pending">Solicitudes por atender</string>

    <string name="welcome_title_stadistics">Estadísticas</string>
    <string name="welcome_btn_stadistics_general">Personalizada</string>

    <!-- Cadenas comunes para Crear de Reportes -->
    <string name="general_btn_other">Otro</string>
    <string name="general_interface_subtitle">No. de Folio:</string>

    <!-- Cadenas para el Fragment de Soporte Tecnico -->
    <string name="technical_support_btn_low_toner">Tóner Bajo</string>
    <string name="technical_support_description_low_toner">La calidad de impresión es baja, probablemente se debe a toner bajo</string>
    <string name="technical_support_btn_paper_jam">Atasco de papel</string>
    <string name="technical_support_description_paper_jam">Atasco de papel en impresora</string>
    <string name="technical_support_btn_virus">Virus</string>
    <string name="technical_support_description_virus">Probable virus en el equipo</string>
    <string name="technical_support_btn_crash_os">Daño en Sistema Operativo</string>
    <string name="technical_support_description_crash_os">Daño del sistema operativo</string>
    <string name="technical_support_btn_password_lost">Pérdida de contraseña</string>
    <string name="technical_support_description_password_lost">Olvidé mi conraseña</string>
    <string name="technical_support_btn_domain_lost">Pérdida de confianza en dominio</string>
    <string name="technical_support_description_domain_lost">Se ha perdido la confianza en el dominio</string>
    <string name="technical_support_btn_other">@string/general_btn_other</string>

    <!-- Cadenas para el Fragment de Crar reporte (Otro) -->
    <string name="report_new_other_txv_description">Descripción del problema:</string>
    <string name="report_new_other_max_lenght">160</string>

    <!-- Cadenas para el Fragment de Buscar reporte por numero de folio -->
    <string name="search_ticket_number_txv_number">Número de folio:</string>

    <!-- Cadenas para el Fragment de detalles del reporte -->
    <string name="report_detail_txv_id_report">Número de folio:</string>
    <string name="report_detail_txv_date">Fecha del reporte:</string>
    <string name="report_detail_txv_user">Usuario:</string>
    <string name="report_detail_txv_area">Área del usuario:</string>
    <string name="report_detail_txv_atention_area">Área de atención:</string>
    <string name="report_detail_txv_description">Descripción:</string>
    <string name="report_detail_txv_estatus">Estatus:</string>

    <!-- Cadenas para el Fragment de Bitacora del reporte -->
    <string name="report_view_history_txv_title">@string/general_interface_subtitle</string>
    <string name="report_view_history_txv_date">Fecha de la acción:</string>
    <string name="report_view_history_txv_user">Usuario que realizó:</string>
    <string name="report_view_history_txv_action">Descripción:</string>

    <!-- Cadenas para el Fragment de Turnar reporte -->
    <string name="report_delegate_default_text">Reporte turnado a</string>
    <string name="report_delegate_txv_title">@string/general_interface_subtitle</string>
    <string name="report_delegate_txv_delegate_title">Turnar reporte</string>
    <string name="report_delegate_txv_atention_area">Área de atención:</string>
    <string name="report_delegate_txv_action">Turnar</string>

    <!-- Cadenas para el Fragment de Seguimiento al reporte -->
    <string name="report_add_history_txv_title">@string/general_interface_subtitle</string>
    <string name="report_add_history_txv_status">Estatus:</string>
    <string name="report_add_history_txv_action">Acciones realizadas:</string>
</resources>