<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_technical_support"
    style="@style/general_layout_relative_nomargin_match_match"
    tools:context=".fragment.TechnicalSupportFragment">

    <LinearLayout
        android:id="@+id/layout_options"
        style="@style/general_layout_lineal_vertical_margin_match_match">

        <Button
            android:id="@+id/technical_support_btn_low_toner"
            style="@style/general_button_icon"
            android:drawableStart="@drawable/ic_menu_camera"
            android:text="@string/technical_support_btn_low_toner" />

        <Button
            android:id="@+id/technical_support_btn_paper_jam"
            style="@style/general_button_icon"
            android:drawableStart="@drawable/ic_menu_camera"
            android:text="@string/technical_support_btn_paper_jam" />

        <Button
            android:id="@+id/technical_support_btn_virus"
            style="@style/general_button_icon"
            android:drawableStart="@drawable/ic_menu_camera"
            android:text="@string/technical_support_btn_virus" />

        <Button
            android:id="@+id/technical_support_btn_crash_os"
            style="@style/general_button_icon"
            android:drawableStart="@drawable/ic_menu_camera"
            android:text="@string/technical_support_btn_crash_os" />

        <Button
            android:id="@+id/technical_support_btn_password_lost"
            style="@style/general_button_icon"
            android:drawableStart="@drawable/ic_menu_camera"
            android:text="@string/technical_support_btn_password_lost" />

        <Button
            android:id="@+id/technical_support_btn_domain_lost"
            style="@style/general_button_icon"
            android:drawableStart="@drawable/ic_menu_camera"
            android:text="@string/technical_support_btn_domain_lost" />

        <Button
            android:id="@+id/technical_support_btn_other"
            style="@style/general_button_icon"
            android:drawableStart="@drawable/ic_menu_camera"
            android:text="@string/technical_support_btn_other" />
    </LinearLayout>

    <include
        android:id="@+id/layout_loading"
        layout="@layout/layout_loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:visibility="gone" />
</RelativeLayout>