<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_report_detail"
    style="@style/general_layout_relative_nomargin_match_match"
    tools:context=".fragment.ReportDetailFragment">

    <LinearLayout
        android:id="@+id/layout_options"
        style="@style/general_layout_linear_vertical_margin_match_match"
        android:visibility="gone">

        <TextView
            android:id="@+id/report_detail_lbl_id_report"
            style="@style/general_textview_main"
            android:text="@string/report_detail_txv_id_report" />

        <TextView
            android:id="@+id/report_detail_txv_id_report"
            style="@style/general_textview_description" />

        <TextView
            android:id="@+id/report_detail_lbl_date"
            style="@style/general_textview_main"
            android:text="@string/report_detail_txv_date" />

        <TextView
            android:id="@+id/report_detail_txv_date"
            style="@style/general_textview_description" />

        <TextView
            android:id="@+id/report_detail_lbl_user"
            style="@style/general_textview_main"
            android:text="@string/report_detail_txv_user" />

        <TextView
            android:id="@+id/report_detail_txv_user"
            style="@style/general_textview_description" />

        <TextView
            android:id="@+id/report_detail_lbl_area"
            style="@style/general_textview_main"
            android:text="@string/report_detail_txv_area" />

        <TextView
            android:id="@+id/report_detail_txv_area"
            style="@style/general_textview_description" />

        <TextView
            android:id="@+id/report_detail_lbl_area_atencion"
            style="@style/general_textview_main"
            android:text="@string/report_detail_txv_atention_area" />

        <TextView
            android:id="@+id/report_detail_txv_area_atencion"
            style="@style/general_textview_description" />

        <TextView
            android:id="@+id/report_detail_lbl_description"
            style="@style/general_textview_main"
            android:text="@string/report_detail_txv_description" />

        <TextView
            android:id="@+id/report_detail_txv_description"
            style="@style/general_textview_description" />

        <TextView
            android:id="@+id/report_detail_lbl_estatus"
            style="@style/general_textview_main"
            android:text="@string/report_detail_txv_estatus" />

        <TextView
            android:id="@+id/report_detail_txv_estatus"
            style="@style/general_textview_description" />
    </LinearLayout>

    <include
        android:id="@+id/layout_loading"
        layout="@layout/layout_loading"
        style="@style/loading_layout_container" />
</RelativeLayout>