<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_about"
    style="@style/general_layout_relative_nomargin_match_match"
    tools:context=".fragment.AboutFragment">

    <LinearLayout
        style="@style/general_layout_linear_vertical_margin_match_wrap"
        android:layout_centerVertical="true">
        <ImageView
            android:id="@+id/imageView"
            style="@style/about_imageview_icon" />

        <TextView
            android:id="@+id/about_txv_company_name"
            android:text="@string/about_txv_company_name"
            style="@style/about_textview_large" />

        <TextView
            android:id="@+id/about_txv_developer_title"
            android:text="@string/about_txv_developer_title"
            style="@style/about_textview_large" />

        <TextView
            android:id="@+id/about_txv_version"
            android:text="@string/about_txv_version"
            style="@style/about_textview_large" />

        <TextView
            android:id="@+id/about_txv_date"
            android:text="@string/about_txv_date"
            style="@style/about_textview_large" />
    </LinearLayout>

</RelativeLayout>